# privy-python-sdk

./: .gitignore  AUTHORIZATION_CONTEXT_SUMMARY.md  BUGFIX_HTTP_CLIENT.md  BUGFIX_SUMMARY.md  CLAUDE.md  MAKEFILE.md  Makefile  QUICK_REFERENCE.md  README.md  WALLET_UPDATE_IMPLEMENTATION.md  privy_openapi.json  pyproject.toml  test_signature_addition.py  test_signature_payload.py
docs/: AUTHORIZATION_CONTEXT.md
examples/: add_policy_rule_example.py  authorization_context_examples.py  authorization_context_integration.py  delete_policy_example.py  delete_rule_example.py  key_quorum_authorization_context_example.py  wallet_update_example.py
makefiles/: build.mk  colors.mk  common.mk  dev.mk  env.mk  test.mk
privy/: _client.py
privy/lib/: __init__.py  authorization_context.py  authorization_signatures.py  hpke.py  http_client.py  key_quorums.py  policies.py  transactions.py  wallets.py
tests/: README.md  __init__.py  conftest.py  test_authorization_context.py  test_http_client.py  test_import_wallet.py  test_key_quorums_authorization_context.py
